--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,4 +4,8 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
-dependencies = []
+dependencies = [
+    "lifelines>=0.30.0",
+    "matplotlib>=3.10.7",
+    "pandas>=2.3.3",
+]
